--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://fernando.st/"
 languageCode = "en-uk"
 title = "Fernando Street"
 theme = "hermit"
-publishDir = "fgardinali.github.io"
+publishDir = "public"
 
 [menu]
 
